--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -7,9 +7,9 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family:"Roboto Mono", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+    sans-serif!important;
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -29,21 +29,18 @@ a {
   color: inherit;
   text-decoration: none;
   font-family: 'Roboto Mono', monospace!important;
+  &.active {
+    border: 2px solid;
+  }
+
+  &.nav-link:not(.active) {
+    border-bottom: 2px solid transparent;
+    &:hover {
+      border-bottom: 2px solid;
+    }
+  }
 }
 
-
-
-/* CSS */
-.button-54 {
-  // font-family: "Open Sans", sans-serif;
-  
-}
-
-.button-54:active {
-  box-shadow: 0px 0px 0px 0px;
-  top: 5px;
-  left: 5px;
-}
 
 @media (min-width: 768px) {
   .button-54 {
