--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap");
+@use './components';
+@use './pages';
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
   font-family: "Roboto Mono", system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -22,6 +25,10 @@ img {
   width: 100%;
   height: auto;
   object-fit: cover;
+}
+
+ul {
+  list-style: none;
 }
 
 .button-54 {
@@ -54,5 +61,4 @@ img {
 //   }
 // }
 
-@use './components/index';
 
