--- a/src/styles/pages/HomePage.scss
+++ b/src/styles/pages/HomePage.scss
@@ -18,5 +18,68 @@
         }
       }
     }
+
+    .section {
+      display: flex;
+      padding: 40px 0;
+      gap: 40px;
+      max-width: 1440px;
+      margin: 0 auto;
+
+      h2 {
+        font-size: 48px;
+      }
+
+      &-item {
+        width: 50%;
+        // max-height: 400px;
+        // height: 400px;
+        display: flex;
+        justify-content: center;
+
+        &.content-wrapper {
+          display: flex;
+          flex-direction: column;
+          justify-content: flex-start;
+          gap: 40px;
+          h2 {
+            text-align: right;
+          }
+
+          p {
+            display: flex;
+            align-self: flex-end;
+            text-align: left;
+            max-width: 600px;
+          }
+        }
+      }
+
+      &.services {
+        flex-direction: column;
+
+        .section-item {
+          justify-content: center;
+          gap: 50px;
+          width: 100%;
+          flex-wrap: wrap;
+          .service-item {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            gap: 10px;
+            img {
+              width: 200px;
+              height: 200px;
+            }
+
+            p {
+              max-width: 400px;
+            }
+          }
+        }
+      }
+    }
   }
 }
