--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -31,6 +31,11 @@ ul {
   list-style: none;
 }
 
+a {
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.8);
+}
+
 .button-54 {
   font-family: "Roboto Mono", system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
