--- a/src/styles/pages/HomePage.scss
+++ b/src/styles/pages/HomePage.scss
@@ -1,7 +1,7 @@
 .main-content-container {
   padding-top: 80px;
   flex: 1;
-  
+
   .home-page {
     .carousel {
       max-height: 550px;
@@ -28,12 +28,11 @@
 
       h2 {
         font-size: 48px;
+        margin-bottom: 10px;
       }
 
       &-item {
         width: 50%;
-        // max-height: 400px;
-        // height: 400px;
         display: flex;
         justify-content: center;
 
@@ -55,7 +54,9 @@
         }
       }
 
-      &.services {
+      &.services,
+      &.founders,
+      &.community {
         flex-direction: column;
 
         .section-item {
@@ -63,7 +64,9 @@
           gap: 50px;
           width: 100%;
           flex-wrap: wrap;
-          .service-item {
+          .service-item,
+          .founder-item,
+          .community-item {
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -76,6 +79,51 @@
 
             p {
               max-width: 400px;
+            }
+
+            .founder-social {
+              display: flex;
+              gap: 12px;
+            }
+          }
+
+          .community-item {
+            position: relative;
+            background: rgba(190, 190, 190, 0.6);
+            padding: 20px;
+            width: 500px;
+            border-radius: 10px;
+            margin-top: 20px;
+            &-count {
+              position: absolute;
+              font-size: 96px;
+              top: 0;
+              left: 20px;
+              transform: translateY(-50%);
+              font-family: 'Roboto', system-ui, Avenir, Helvetica, Arial, sans-serif;
+            }
+            &-content {
+              display: flex;
+              flex-direction: row;
+              gap: 20px;
+              justify-content: space-between;
+              width: 100%;
+
+              h3 {
+                font-size: 48px;
+                display: flex;
+                align-self: center;
+              }
+            }
+          }
+
+          &.founders-list {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+
+            &-center {
+              // center the item in the grid if there is only one item
+              grid-template-columns: 1fr;
             }
           }
         }
