--- a/src/styles/components/Header.scss
+++ b/src/styles/components/Header.scss
@@ -1,9 +1,61 @@
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  max-height: 80px;
-  max-width: 1440px;
-  padding-block: 10px;
-  margin: 0 auto;
+header {
+ 
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-height: 80px;
+    max-width: 1440px;
+    padding: 10px 20px;
+    margin: 0 auto;
+
+    .navbar-items {
+      display: flex;
+      gap: 1rem;
+      list-style: none;
+    }
+
+    @media (max-width: 1440px) {
+      max-width: 1200px;
+      // padding:
+    }
+
+    @media (max-width: 1200px) {
+      max-width: 992px;
+    }
+
+    @media (max-width: 992px) {
+      max-width: 768px;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .navbar {
+      .navbar-items {
+        display: none;
+      }
+    }
+  }
+}
+
+.menu-button {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .menu-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.drawer-items {
+  li + li {
+    margin-top: 1rem;
+  }
+
+  button {
+    width: 100%;
+  }
 }
