--- a/src/styles/pages/HomePage.scss
+++ b/src/styles/pages/HomePage.scss
@@ -50,6 +50,32 @@
       }
     }
 
+    @media (max-width: 992px) {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 20px;
+
+      h2 {
+        font-size: 36px
+      }
+
+      &-item {
+        width: 100%;
+        &.content-wrapper {
+          gap: 20px;
+          h2 {
+            text-align: center;
+          }
+
+          p {
+            text-align: center;
+            align-self: center;
+          }
+        }
+      }
+    }
+
     &.services,
     &.founders,
     &.community {
