--- a/src/styles/pages/HomePage.scss
+++ b/src/styles/pages/HomePage.scss
@@ -50,32 +50,6 @@
       }
     }
 
-    @media (max-width: 992px) {
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      padding: 20px;
-
-      h2 {
-        font-size: 36px
-      }
-
-      &-item {
-        width: 100%;
-        &.content-wrapper {
-          gap: 20px;
-          h2 {
-            text-align: center;
-          }
-
-          p {
-            text-align: center;
-            align-self: center;
-          }
-        }
-      }
-    }
-
     &.services,
     &.founders,
     &.community {
@@ -149,6 +123,39 @@
             grid-template-columns: 1fr;
           }
         }
+      }
+    }
+
+    @media (max-width: 992px) {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 20px;
+      max-width: 768px;
+
+      h2 {
+        font-size: 36px
+      }
+
+      &-item {
+        width: 100%;
+        &.content-wrapper {
+          gap: 10px;
+          h2 {
+            text-align: center;
+          }
+
+          p {
+            max-width: 100%;
+            padding: 0 1rem;
+            text-align: center;
+            align-self: center;
+          }
+        }
+      }
+
+      &.about-us {
+        flex-direction: column-reverse;
       }
     }
   }
