--- a/src/styles/pages/HomePage.scss
+++ b/src/styles/pages/HomePage.scss
@@ -124,6 +124,30 @@
           }
         }
       }
+
+      .members-list {
+        position: relative;
+        overflow-x: hidden;
+        white-space: nowrap;
+        height: 200px;
+        width: 100%;
+
+        .horizontal-auto-scroll {
+          position: absolute;
+          left: 0px;
+          overflow: hidden;
+          white-space: nowrap;
+          animation-name: scroll;
+          animation-duration: 15s;
+          animation-iteration-count: infinite;
+          animation-timing-function: linear;
+
+          .member-avatar {
+            width: 180px;
+            height: 180px;
+          }
+        }
+      }
     }
 
     @media (max-width: 992px) {
@@ -134,7 +158,7 @@
       max-width: 768px;
 
       h2 {
-        font-size: 36px
+        font-size: 36px;
       }
 
       &-item {
@@ -157,6 +181,70 @@
       &.about-us {
         flex-direction: column-reverse;
       }
+
+      &.community {
+        .section-item {
+          justify-content: center;
+          gap: 20px;
+          width: 100%;
+          
+          .community-item {
+            position: relative;
+            background: rgba(190, 190, 190, 0.6);
+            padding: 20px;
+            width: 400px;
+            border-radius: 10px;
+            margin-top: 20px;
+            &-count {
+              position: absolute;
+              font-size: 64px;
+              top: 0;
+              left: 20px;
+              transform: translateY(-50%);
+              font-family: "Roboto", system-ui, Avenir, Helvetica, Arial,
+                sans-serif;
+            }
+            &-content {
+              display: flex;
+              flex-direction: row;
+              gap: 20px;
+              justify-content: space-between;
+              width: 100%;
+  
+              h3 {
+                font-size: 32px;
+                display: flex;
+                align-self: center;
+              }
+
+              img {
+                width: 150px;
+                height: 150px;
+              }
+            }
+          }
+
+        }
+        .members-list {
+          height: 120px;
+          .horizontal-auto-scroll {
+            .member-avatar {
+              width: 120px;
+              height: 120px;
+            }
+          }
+        }
+      }
     }
+  }
+}
+
+@keyframes scroll {
+  0% {
+    transform: translate(0, 0);
+  }
+
+  100% {
+    transform: translate(-50%, 0);
   }
 }
