--- a/src/styles/abstract/_reset.scss
+++ b/src/styles/abstract/_reset.scss
@@ -19,3 +19,7 @@ a {
   text-decoration: none;
   color: rgba(0, 0, 0, 0.8);
 }
+
+.css-dev-only-do-not-override-1kf000u a:hover {
+  color: rgba(0, 0, 0, 0.8);
+}
