--- a/src/styles/abstract/_reset.scss
+++ b/src/styles/abstract/_reset.scss
@@ -23,3 +23,9 @@ a {
 .css-dev-only-do-not-override-1kf000u a:hover {
   color: rgba(0, 0, 0, 0.8);
 }
+
+.ant-drawer .ant-drawer-close {
+  // background: rgba(0, 0, 0, 0.06);
+  // padding: 12px 18px;
+  color: #000;
+}
