--- a/src/styles/abstract/_global.scss
+++ b/src/styles/abstract/_global.scss
@@ -9,17 +9,30 @@
   cursor: pointer;
   border: 3px solid;
   padding: 0.25em 0.5em;
-  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
   position: relative;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
+  transition: box-shadow 0.2s ease-in-out;
+}
+
+.button-54:hover {
+  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+  transition: box-shadow 0.2s ease-in-out;
 }
 
 .button-54:active {
   box-shadow: 0px 0px 0px 0px;
   top: 5px;
   left: 5px;
+}
+
+.roboto {
+  font-family: "Roboto", system-ui, Avenir, Helvetica, Arial, sans-serif;
+}
+
+.roboto-mono {
+  font-family: "Roboto Mono", system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
 // @media (min-width: 768px) {
