--- a/src/styles/components/Footer.scss
+++ b/src/styles/components/Footer.scss
@@ -1,93 +1,24 @@
-.navbar-footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0 auto;
-  padding: 20px 0;
-  max-width: 1200px;
+footer {
+  p,a {
+    font-family: "Roboto", system-ui, Avenir, Helvetica, Arial, sans-serif;
+    font-weight: 400;
+  }
 
-  .footer-newsletter {
-    h4 {
-      // font-family: "Roboto", system-ui, Avenir, Helvetica, Arial, sans-serif;
-      font-size: 24px;
-      font-weight: 600;
-      color: rgba(0, 0, 0);
-    }
+  .email-input {
+    border: 3px solid #000;
+    padding: 0.35em 0.5em;
+    // box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+    border-radius: 0;
+    outline: none;
 
-    p {
-      font-family: "Roboto", system-ui, Avenir, Helvetica, Arial, sans-serif;
-      font-size: 14px;
-      font-weight: 400;
-      color: rgba(0, 0, 0, 0.6);
-    }
-
-    .newsletter-input {
-      border-radius: 0;
+    &:focus {
       border: 3px solid #000;
-      box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px,
-        4px 4px 0px 0px, 5px 5px 0px 0px;
-      background-color: rgb(245, 245, 245);
-      font-family: "Roboto Mono", system-ui, Avenir, Helvetica, Arial,
-        sans-serif;
-      color: rgba(0, 0, 0, 0.8);
-      font-weight: 500;
-
-      &::placeholder {
-        font-family: "Roboto Mono", system-ui, Avenir, Helvetica, Arial,
-          sans-serif;
-        color: rgba(0, 0, 0, 0.6);
-      }
-    }
-  }
-  .footer-contact,
-  .footer-social {
-    display: flex;
-    gap: 20px;
-  }
-
-  .footer-social {
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    margin-top: 20px;
-  }
-
-  .footer-contact {
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    gap: 24px;
-
-    h4 {
-      font-size: 24px;
-    }
-  }
-
-  .footer-divider {
-    min-width: 600px;
-    width: 600px;
-  }
-
-  @media (max-width: 768px) {
-    flex-direction: column;
-    gap: 20px;
-    max-width: 100dvw;
-
-    .footer-newsletter {
-      width: 100%;
+      box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
     }
 
-    .footer-contact,
-    .footer-social {
-      width: 100%;
-      justify-content: center;
-      p {
-        font-size: 12px;
-      }
-    }
-
-    .footer-copyright {
-      font-size: 12px;
+    &:hover {
+      border: 3px solid #000;
+      box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
     }
   }
 }
