--- a/src/styles/pages/HomePage.scss
+++ b/src/styles/pages/HomePage.scss
@@ -17,7 +17,7 @@
 
   .section {
     display: flex;
-    padding: 40px 0;
+    padding: 40px;
     gap: 40px;
     max-width: 1440px;
     margin: 0 auto;
@@ -41,12 +41,23 @@
           text-align: right;
         }
 
-        p {
+        div {
           display: flex;
+          flex-direction: column;
           align-self: flex-end;
           text-align: left;
-          max-width: 600px;
+          // max-width: 600px;
+
+          p + p {
+            margin-top: 10px;
+          }
         }
+      }
+    }
+
+    &.services {
+      .section-item {
+        @apply grid grid-cols-1 md:grid-rows-1 gap-4;
       }
     }
 
@@ -77,7 +88,7 @@
             max-width: 400px;
           }
 
-          .founder-social, .member-social {
+          .founder-social {
             display: flex;
             gap: 12px;
 
@@ -132,7 +143,8 @@
       .partners-list {
         margin-top: 20px;
       }
-      .members-list, .partners-list {
+      .members-list,
+      .partners-list {
         position: relative;
         overflow-x: hidden;
         white-space: nowrap;
@@ -152,13 +164,12 @@
           &.reversed {
             animation-direction: reverse;
           }
-
         }
 
-        .slick-prev, .slick-next {
+        .slick-prev,
+        .slick-next {
           width: 32px;
           height: 32px;
-          
         }
 
         .slick-prev {
@@ -170,10 +181,10 @@
         }
 
         .slick-dots {
-          bottom: -15px;
+          bottom: -30px;
           li {
             button {
-              background : rgba(61, 61, 61, 0.8);
+              background: rgba(61, 61, 61, 0.8);
             }
           }
           li.slick-active {
@@ -185,8 +196,9 @@
         }
 
         .slick-slide {
-          & > div, & > div > div {
-            display: flex!important;
+          & > div,
+          & > div > div {
+            display: flex !important;
             justify-content: space-evenly;
             align-items: center;
             flex-wrap: wrap;
@@ -198,27 +210,51 @@
           align-items: center;
           justify-content: space-between;
           max-width: 180px;
+          gap: 5px;
         }
         .member-avatar {
-          width: 100%!important;
+          width: 100% !important;
           height: 180px;
           &.large {
-            width: 200px!important;
+            width: 200px !important;
             height: 200px;
           }
+        }
+
+        .member-social {
+          display: flex;
+          gap: 10px;
         }
       }
     }
 
-    @media (max-width: 992px) {
+    @media (max-width: 1440px) {
+      max-width: 1200px;
+      padding: 40px 32px;
+    }
+
+    @media (max-width: 1280px) {
+    }
+
+    @media (max-width: 1024px) {
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      padding: 20px;
-      max-width: 768px;
+      padding: 40px 32px;
 
       h2 {
         font-size: 36px;
+      }
+
+      &.services {
+        .section-item {
+          .service-item {
+            img {
+              width: 150px;
+              height: 150px;
+            }
+          }
+        }
       }
 
       &-item {
@@ -229,10 +265,14 @@
             text-align: center;
           }
 
+          div {
+            align-self: center;
+          }
+
           p {
             max-width: 100%;
-            padding: 0 1rem;
-            text-align: center;
+            padding: 0 8px;
+            font-size: 15px;
             align-self: center;
           }
         }
@@ -248,7 +288,7 @@
           justify-content: center;
           gap: 20px;
           width: 100%;
-          
+
           .community-item {
             position: relative;
             background: rgba(190, 190, 190, 0.6);
@@ -271,7 +311,7 @@
               gap: 20px;
               justify-content: space-between;
               width: 100%;
-  
+
               h3 {
                 font-size: 32px;
                 display: flex;
@@ -284,7 +324,6 @@
               }
             }
           }
-
         }
         .members-list {
           height: 100dvh;
@@ -292,7 +331,7 @@
           .horizontal-auto-scroll {
           }
           .member-avatar {
-            width: 120px!important;
+            width: 120px !important;
             height: 120px;
 
             &.large {
@@ -300,7 +339,8 @@
               height: 200px;
             }
           }
-          .slick-prev, .slick-next {
+          .slick-prev,
+          .slick-next {
             width: 24px;
             height: 24px;
           }
@@ -309,12 +349,59 @@
     }
 
     @media (max-width: 768px) {
+      padding: 40px 12px;
+      max-width: 768px;
+      &.services {
+        .section-item {
+          padding-inline: 32px;
+          .service-item {
+            display: flex;
+            flex-direction: row;
+            gap: 40px;
+            justify-content: space-between;
+            img {
+              width: 80px;
+              height: 80px;
+            }
+            h3 {
+              text-align: start;
+            }
+            p {
+              max-width: fit-content !important;
+              font-size: 13px;
+            }
+          }
+        }
+      }
+
+      &-item {
+        width: 100%;
+        &.content-wrapper {
+          gap: 10px;
+          h2 {
+            text-align: center;
+          }
+
+          div {
+            align-self: center;
+          }
+
+          p {
+            max-width: 100%;
+            padding: 0;
+            font-size: 13px;
+            word-wrap: normal;
+            word-break: keep-all;
+            align-self: center;
+          }
+        }
+      }
       &.community {
         .members-list {
           height: 100dvh;
           max-height: 500px;
           .member-avatar {
-            width: 120px!important;
+            width: 120px !important;
             height: 120px;
 
             &.large {
@@ -322,9 +409,38 @@
               height: 200px;
             }
           }
-          .slick-prev, .slick-next {
+          .slick-prev,
+          .slick-next {
             width: 24px;
             height: 24px;
+          }
+        }
+      }
+    }
+
+    @media (max-width: 640px) {
+      padding: 40px 12px;
+      max-width: 768px;
+      &.services {
+        .section-item {
+          padding-inline: 16px;
+          .service-item {
+            display: flex;
+            flex-direction: row;
+            gap: 30px;
+            justify-content: space-between;
+            img {
+              width: 70px;
+              height: 70px;
+            }
+            h3 {
+              text-align: start;
+              font-size: 14px;
+            }
+            p {
+              max-width: fit-content !important;
+              font-size: 11px;
+            }
           }
         }
       }
