--- a/src/styles/abstract/_global.scss
+++ b/src/styles/abstract/_global.scss
@@ -1,7 +1,7 @@
 .button-54 {
   font-family: "Roboto Mono", system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
-  font-weight: 500;
+  font-weight: 600;
   letter-spacing: 2px;
   text-decoration: none;
   text-transform: uppercase;
@@ -17,15 +17,15 @@
 }
 
 .button-54:hover {
-  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+  box-shadow: 1px 1px 0px 0px , 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
   transition: box-shadow 0.2s ease-in-out;
 }
 
-.button-54:active {
-  box-shadow: 0px 0px 0px 0px;
-  top: 5px;
-  left: 5px;
-}
+// .button-54:active {
+//   box-shadow: 0px 0px 0px 0px;
+//   top: 5px;
+//   left: 5px;
+// }
 
 .roboto {
   font-family: "Roboto", system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -33,6 +33,18 @@
 
 .roboto-mono {
   font-family: "Roboto Mono", system-ui, Avenir, Helvetica, Arial, sans-serif;
+}
+
+.inter {
+  font-family: "Inter", system-ui, Avenir, Helvetica, Arial, sans-serif;
+}
+
+.text-orange {
+  color: #f8843d;
+}
+
+.text-dark-blue {
+  color: #0A1A51;
 }
 
 // @media (min-width: 768px) {
