--- a/src/styles/components/Footer.scss
+++ b/src/styles/components/Footer.scss
@@ -4,12 +4,34 @@ footer {
     font-weight: 400;
   }
 
+  nav {
+    @media (min-width: 1280px) {
+      max-width: 1100px;
+      width: 100%;
+      margin: 0 auto;
+    }
+
+    @media (max-width: 1280px) {
+      max-width: 800px;
+      margin: 0 auto;
+    }
+  }
+
+  .newsletter {
+    background: url('src/assets/newsletter.png') no-repeat center center;
+    padding: 16px;
+    max-width: 700px;
+    margin-inline: auto;
+    width: 100%;
+  }
+
   .email-input {
     border: 3px solid #000;
     padding: 0.35em 0.5em;
     // box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
     border-radius: 0;
     outline: none;
+    // max-width: 800px;
 
     &:focus {
       border: 3px solid #000;
