--- a/src/styles/components/Footer.scss
+++ b/src/styles/components/Footer.scss
@@ -18,7 +18,7 @@ footer {
   }
 
   .newsletter {
-    background: url('src/assets/newsletter.png') no-repeat center center;
+    background: url('/newsletter.png') no-repeat center center;
     padding: 16px;
     max-width: 700px;
     margin-inline: auto;
@@ -27,7 +27,8 @@ footer {
 
   .email-input {
     border: 3px solid #000;
-    padding: 0.35em 0.5em;
+    padding: 4px 8px;
+    height: 39.14px;
     // box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
     border-radius: 0;
     outline: none;
