--- a/src/styles/abstract/_global.scss
+++ b/src/styles/abstract/_global.scss
@@ -2,12 +2,12 @@
   font-family: "Roboto Mono", system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   font-weight: 600;
-  letter-spacing: 2px;
+  // letter-spacing: 2px;
   text-decoration: none;
   text-transform: uppercase;
-  color: #000;
+  color: #0A1A51;
   cursor: pointer;
-  border: 3px solid;
+  border: 3px solid #0A1A51;
   padding: 0.25em 0.5em;
   position: relative;
   user-select: none;
@@ -17,15 +17,15 @@
 }
 
 .button-54:hover {
-  box-shadow: 1px 1px 0px 0px , 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+  box-shadow: #0A1A51 1px 1px 0px 0px , #0A1A51 2px 2px 0px 0px, #0A1A51 3px 3px 0px 0px, #0A1A51 4px 4px 0px 0px, #0A1A51 5px 5px 0px 0px;
   transition: box-shadow 0.2s ease-in-out;
 }
 
-// .button-54:active {
-//   box-shadow: 0px 0px 0px 0px;
-//   top: 5px;
-//   left: 5px;
-// }
+.button-54:active {
+  box-shadow: 0px 0px 0px 0px;
+  top: 5px;
+  left: 5px;
+}
 
 .roboto {
   font-family: "Roboto", system-ui, Avenir, Helvetica, Arial, sans-serif;
