--- a/src/styles/components/Footer.scss
+++ b/src/styles/components/Footer.scss
@@ -26,7 +26,7 @@ footer {
   }
 
   .email-input {
-    border: 3px solid #000;
+    border: 3px solid #0A1A51;
     padding: 4px 8px;
     height: 39.14px;
     // box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
@@ -35,13 +35,11 @@ footer {
     // max-width: 800px;
 
     &:focus {
-      border: 3px solid #000;
-      box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+      border: 3px solid #0A1A51;
     }
 
     &:hover {
-      border: 3px solid #000;
-      box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+      border: 3px solid #0A1A51;
     }
   }
 }
