--- a/src/styles/pages/HomePage.scss
+++ b/src/styles/pages/HomePage.scss
@@ -80,7 +80,7 @@
 
       .section-item {
         justify-content: center;
-        gap: 50px;
+        gap: 1rem;
         width: 100%;
         flex-wrap: wrap;
         .service-item,
